--- a/static/css/style.css
+++ b/static/css/style.css
@@ -244,7 +244,7 @@ nav span {
 .page .nav .btn {
     padding: 0 10px;
     color: var(--f600);
-    font-size: 6ch;
+    font-size: 5ch;
     transition: color 300ms ease;
     font-weight: 300
 }
@@ -379,6 +379,11 @@ nav span {
 
 .content .by2s img {
     width: 46%;
+    margin: 1%
+}
+
+.content .by1s img {
+    width: 95%;
     margin: 1%
 }
 
